[package]
name = "hurlin"
version = "0.1.0"
edition = "2021"


[profile.dev.package."*"]
opt-level = 3

[dependencies]
axum = { version = "0.7.6", features = ["macros", "http2"] }
camino = { version = "1.1.9", features = ["serde1"] }
cap-std = { version = "3.2.0", features = ["fs_utf8"] }
hex = "0.4.3"
indexmap = "2.5.0"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
