[package]
name = "hurlin"
version = "0.1.0"
edition = "2021"


[profile.dev.package."*"]
opt-level = 3

[dependencies]
axum = { version = "0.7.6", features = ["macros", "http2"] }
camino = { version = "1.1.9", features = ["serde1"] }
cap-std = { version = "3.2.0", features = ["fs_utf8"] }
clap = { version = "4.5.18", features = ["derive"] }
gethostname = "0.5.0"
hex = "0.4.3"
indexmap = "2.5.0"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-json = "0.1.1"
