[package]
name = "hurlin"
version = "0.1.4"
edition = "2021"


[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
overflow-checks=true

[dependencies]
axum = { version = "0.8", features = ["macros", "http2"] }
camino = "1.1.9"
cap-std = { version = "3.2.0", features = ["fs_utf8"] }
clap = { version = "4.5.18", features = ["derive"] }
gethostname = "1"
hex = "0.4.3"
indexmap = "2.5.0"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
rand = "0.9"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-json = "0.1.1"
